M2 accept ADR-0024 after 64-test gate